# NinjaGame

./: .gitignore  CMakeLists.txt  LICENSE  LevelEditor.cpp  LevelEditor.h  Player.cpp  Player.h  README.md  backupmain.cpp  main.cpp
Art/Enemies/: swordsman.aseprite
Art/Particles/: Hay.aseprite  WhiteSlash.aseprite
Art/Player/: ninjatemp.aseprite
Art/Test/: FightDummy.aseprite
Art/Tilemap/: NinjaGameTileset.tsx  Tilemap.aseprite
BaseClasses/: Base.h
Effects/: DEFAULTEFFECTPARAMS.h  EffectsManager.cpp  EffectsManager.h  PhysicsBasedParticle.cpp  PhysicsBasedParticle.h  SlashEffect.cpp  SlashEffect.h
Engine/: Animation.cpp  Animation.h  Chunks.cpp  Chunks.h  Collision.cpp  Collision.h  DrawingPipeline.cpp  DrawingPipeline.h  EventManager.h  GameCamera.cpp  GameCamera.h  InputManager.cpp  InputManager.h  ReferencePool.cpp  ReferencePool.h  SoundSystem.cpp  SoundSystem.h  Spritesplitter.cpp  Spritesplitter.h
Levels/: Level1.tmx  Level1_parsed.txt  chunker.py
NPC/: Dummy.cpp  Dummy.h
World/: Grass.cpp  Grass.h
